--- a/Refs.bib
+++ b/Refs.bib
@@ -62,4 +62,12 @@
 	Danfoss' koncernchef Niels B. Christiansen venter "beskeden vækst" i år.},
 	note = {Online content protected by payment wall, article text included in Appendix B.}
 }
+
+@online {Copyright,
+	author = {Douglas Linn},
+	title = {Understanding the Wizards v. Hex Lawsuit (in plain English)},
+	year = 2014,
+	howpublished = {\url{http://www.quietspeculation.com/2014/05/understanding-the-wizards-v-hex-lawsuit-in-plain-english/},
+	note = {Accessed 2014-05-22}
+}
 	
