--- a/Thesis.tex
+++ b/Thesis.tex
@@ -91,10 +91,13 @@
 \include{ChapterIntroduction}						%Chapter Introduction                             
 \include{Chapter2} 									%Chapter 2
 \include{Chapter3}                               	%Chapter 3
-\include{Implementation}
+\include{Implementation}							%Chapter 4, Implementation
+\include{Test}										%Chapter 5, Test
+\include{Evaluation}								%Chapter 6, Evaluation
 \appendix	
 \include{Appendix1}                                 %Appendix A
-\include{ArticleContent}
+\include{ArticleContent}							%Appendix containing article text
+\include{DatadiagramsAppendix}						%Appendix containing diagrams about the dataflow
 %-----------
 % Backmatter
 %-----------
